k8s/lab4/mybackendlb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybackendlb-deployment
  labels:
    component: backend
    app: my-app

spec:
  template:
    metadata:
      name: mybackendlb-pod
      labels:
        component: backend
        app: my-app
    spec:
      containers:
        - name: mybackendlb-container
          image: adriandyjecinski/mybackendlb
  replicas: 5
  selector: 
    matchLabels:
      component: backend
      app: my-app
