k8s/lab4/my-nginx-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      
  selector: 
    component: web
    app: my-app
