k8s/lab4/mybackendlb-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybackendlb-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      
  selector: 
    component: backend
    app: my-app
