k8s/lab4/mybackendlb-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybackend-node-port

spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 31100
  selector: 
    component: backend
    app: my-app
